# jido

./: CLAUDE.md  Cargo.toml  flake.nix
src/: lib.rs  main.rs
