[package]
name = "jido"
version = "0.1.0"
edition = "2024"
rust-version = "1.91.0"
description = "AI workflow executor"
license = "MIT"
repository = "https://github.com/pleme-io/jido"

[[bin]]
name = "jido"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["full"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true

[lints.clippy]
pedantic = "warn"
